@@ -23,8 +23,6 @@ public class ThreadState<T extends Message> {
 
   private ThreadState(T message) {
     Objects.requireNonNull(message);
-    Preconditions.checkArgument(
-        message.role() != Role.SYSTEM, "ThreadState should never hold a system message");
     this.messages = ImmutableList.of(message);
     messageFactory = MessageFactory.instance(message);
   }
@@ -32,8 +30,6 @@ public class ThreadState<T extends Message> {
   /** Constructor that exists to support the with method */
   private ThreadState(ThreadState<T> old, T newMessage) {
     Objects.requireNonNull(newMessage);
-    Preconditions.checkArgument(
-        newMessage.role() != Role.SYSTEM, "ThreadState should never hold a system message");
     messageFactory = old.messageFactory;
     Preconditions.checkArgument(
         old.tail().threadId().equals(newMessage.threadId()),
@@ -62,8 +58,6 @@ public class ThreadState<T extends Message> {
     return switch (message.role()) {
       case ASSISTANT -> message.recipientId();
       case USER -> message.senderId();
-      case SYSTEM -> throw new IllegalStateException(
-          "ThreadState should never hold a SYSTEM message");
     };
   }
 
@@ -72,18 +66,27 @@ public class ThreadState<T extends Message> {
     return switch (message.role()) {
       case ASSISTANT -> message.senderId();
       case USER -> message.recipientId();
-      case SYSTEM -> throw new IllegalStateException(
-          "ThreadState should never hold a SYSTEM message");
     };
   }
 
   public T newMessageFromBot(Instant timestamp, String message) {
     return messageFactory.newMessage(
-        timestamp, message, botId(), userId(), Identifier.random(), Role.ASSISTANT);
+        timestamp,
+        new Payload.Text(message),
+        botId(),
+        userId(),
+        Identifier.random(),
+        Role.ASSISTANT);
+  }
+
+  public T newMessageFromBot(Instant timestamp, Payload<?> payload) {
+    return messageFactory.newMessage(
+        timestamp, payload, botId(), userId(), Identifier.random(), Role.ASSISTANT);
   }
 
   public T newMessageFromUser(Instant timestamp, String message, Identifier instanceId) {
-    return messageFactory.newMessage(timestamp, message, userId(), botId(), instanceId, Role.USER);
+    return messageFactory.newMessage(
+        timestamp, new Payload.Text(message), userId(), botId(), instanceId, Role.USER);
   }
 
   public ThreadState<T> with(T message) {
@@ -95,6 +98,6 @@ public class ThreadState<T extends Message> {
   }
 
   public T tail() {
-    return messages.get(messages.size() - 1);
+    return messages.getLast();
   }
 }
